# services

./: .gitignore  Cargo.toml  Dockerfile  README.md
scripts/: Dockerfile.python  Dockerfile.python.dockerignore  Dockerfile.rust  Dockerfile.rust.dockerignore
src/secret-secret/dashboard/secret-secret-dashboard/: jest.config.js  package-lock.json  package.json  tsconfig.json
src/secret-secret/dashboard/secret-secret-dashboard/public/: index.html
src/secret-secret/dashboard/secret-secret-dashboard/src/: App.vue  main.ts
src/secret-secret/dashboard/secret-secret-dashboard/src/components/: Controls.vue  CookieBanner.vue  CreateSecret.vue  Home.vue  Lock.vue  SecretCard.vue
src/secret-secret/dashboard/secret-secret-dashboard/src/components/ads/: GoogleAdSense.vue
src/secret-secret/dashboard/secret-secret-dashboard/src/components/secrets/: CreateSecret.vue  Lock.vue  SecretButton.vue  SecretCard.vue  SecretTextArea.vue
src/secret-secret/dashboard/secret-secret-dashboard/src/config/: constants.ts
src/secret-secret/dashboard/secret-secret-dashboard/src/router/: routes.ts
src/secret-secret/dashboard/secret-secret-dashboard/src/sagas/: index.ts  secrets.ts
src/secret-secret/dashboard/secret-secret-dashboard/src/stores/: index.ts
src/secret-secret/dashboard/secret-secret-dashboard/src/types/: global.d.ts  shims-img.d.ts
src/secret-secret/dashboard/secret-secret-dashboard/src/views/: CookiePolicy.vue  Home.vue
src/secret-secret/functions/create-secret/: Cargo.toml  main.rs
src/secret-secret/functions/create-secret/src/: main.rs
src/secret-secret/functions/create-secret/test-data/: send-message.xml
src/secret-secret/functions/get-secret/: Cargo.toml
src/secret-secret/functions/get-secret/src/: main.rs
src/secret-secret/functions/get-secret/test-data/: get_item.json  scan.json
src/secret-secret/functions/rate-secret/: Cargo.toml  main.rs
src/secret-secret/functions/review-secret/: Cargo.toml  Pipfile  requirements.txt
src/secret-secret/functions/review-secret/models/: giberish_model_v1.pkl
src/secret-secret/functions/review-secret/src/: main.py  main.rs  main_test.py
src/secret-secret/models/: Cargo.toml
src/secret-secret/models/src/: secrets.rs
src/shared/aws/sqs/: Cargo.toml
src/shared/aws/sqs/src/: mock.rs
terraform/env/production/secret-secret/api/: backend.tf  main.tf  outputs.tf  project.auto.tfvars  vars.tf
terraform/env/production/secret-secret/api/apigateway/: main.tf  outputs.tf  vars.tf
terraform/env/production/secret-secret/secrets/: .terraform.lock.hcl  Makefile  backend.tf  main.tf  vars.tf
terraform/env/production/secret-secret/secrets/apigateway/: main.tf
terraform/env/production/secret-secret/secrets/dependencies/: api.tf
terraform/env/production/secret-secret/secrets/ecr/: main.tf  outputs.tf
terraform/env/production/secret-secret/secrets/iam/: main.tf  outputs.tf
terraform/env/production/secret-secret/secrets/lambda/: main.tf  outputs.tf  vars.tf
terraform/env/production/secret-secret/secrets/sqs/: outputs.tf
terraform/modules/apigateway/http/base-method/: main.tf  vars.tf
terraform/modules/lambda/: main.tf  outputs.tf  vars.tf
terraform/terraform-configuration/: backend.tf  main.tf  vars.tf
terraform/terraform-configuration/s3/: main.tf
terraform/tfvars/: production.tfvars
(+30 files in other folders)
