[package]
name = "secret-secret_create-secret"
version = "0.1.0"
edition = "2021"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "create-secret"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.14"
tokio = "1.12.0"
http = "0.2.5"
simple_logger = "1.13.0"
lambda_runtime = "0.4.1"
aws_lambda_events = "0.5.0"
aws-config = "0.9.0"
aws-sdk-sqs = "0.9.0"
async-trait = "0.1"
aws-types = "0.9.0"

# LOCAL DEPENDENCIES
models = { package = "secret-secret_models" , path = "../../models"}
sqs = { package = "aws-sqs" , path = "../../../shared/aws/sqs"}
