[package]
name = "secret-secret_get-secret"
version = "0.1.0"
edition = "2021"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "get-secret"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.14"
tokio = "1.12.0"
http = "0.2.5"
simple_logger = "1.13.0"
lambda_runtime = "0.4.1"
aws_lambda_events = "0.5.0"
aws-config = "0.9.0"
aws-sdk-dynamodb = "0.9.0"
once_cell = "1.10.0"
futures = "0.3.21"
rand = "0.8.5"
serde_dynamo = { version = "3", features = ["aws-sdk-dynamodb+0_9"] }
aws-smithy-client = {version = "0.39.0", features = [ "test-util" ] }
aws-smithy-http = "0.39.0"
aws-types = "0.9.0"

# LOCAL DEPENDENCIES
models = { package = "secret-secret_models" , path = "../../models"}